--- a/release/package.json
+++ b/release/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "mewcc",
-  "version": "0.0.3",
-  "description": "A Frontend Multi-Element Widgets Community Collection",
-  "main": "index.js",
+  "name": "release",
+  "main": "./dist",
+  "version": "0.0.4",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "vite build"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/NovaGrand/MewCC.git"
-  },
-  "author": "NovaGrand",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/NovaGrand/MewCC/issues"
-  },
-  "homepage": "https://github.com/NovaGrand/MewCC#readme",
   "dependencies": {
-    "hls.js": "^1.2.0"
+    "hls.js": "^1.2.0",
+    "vue": "^3.0.5"
+  },
+  "devDependencies": {
+    "vite": "^3.1.0",
+    "@vitejs/plugin-vue": "^1.3.0",
+    "node-sass": "^6.0.0",
+    "sass": "^1.34.0",
+    "sass-loader": "^11.1.1"
   }
 }
