--- a/release/package.json
+++ b/release/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "release",
+  "name": "mewcc",
+  "version": "0.0.5",
+  "description": "A Frontend Multi-Element Widgets Community Collection",
   "main": "./dist",
-  "version": "0.0.4",
   "type": "module",
   "scripts": {
     "build": "vite build"
